test/errors/const2.ida

#OUTPUT
#Syntax Error: Missing constant name.
# -> [10] const int = 20
#
#END

#RET 0

const int = 20

extern func printf(s:str, ...)

func main -> int
begin
    return 0;
end
